Adjusted both game gallerys on dashboard to look better Todo: Fix OwnedGamesGallery Clean up code

--- a/frontend/src/app/Dashboard/Dashboard.module.css
+++ b/frontend/src/app/Dashboard/Dashboard.module.css
@@ -3,12 +3,13 @@
 }
 
 .featuredGames {
-    
-    padding: 50px 50px;
     text-align: center;
 }
 
-.otherGames {
-    padding: 50px 50px;
+.TopRatedGames {
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    padding: 25px;
+    width: 100%-padding;
 }
