--- a/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
+++ b/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
@@ -1,9 +1,14 @@
 .scrollContainer {
+  margin: 0 auto;
+    /* Centers within parent */
+  position: relative;
   width: 100%;
   padding: 20px 0;
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 15px;
-  border: 1px solid var(--text-bw); 
+  max-width: 1400px;
+    padding-top: 2px;
+  
 }
 
 .gridContainer {
@@ -11,18 +16,21 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
+  
   padding: 0 20px;
+  
 }
 
 .imageWrapper {
+  background: linear-gradient(180deg, var(--bg-dark), var(--bg-primary));
   position: relative;
   width: fit-content;
   background-color: var(--bg-primary);
-  border: 1px solid var(--text-bw);
   border-radius: 8px;
   text-decoration: none;
   transition: transform 0.3s ease-in-out;
   overflow: hidden; /* Ensure the overlay stays within bounds */
+  
 }
 
 .imageWrapper:hover {
@@ -57,7 +65,6 @@
   padding: 15px;
   color: var(--text-bw);
   width: inherit;
-  background-color: var(--bg-primary);
   opacity: .6;
 }
 
@@ -67,8 +74,7 @@
 
 /* Overlay effect */
 .imageWrapper::after {
-  content: '';
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75); /* Semi-transparent black overlay */
@@ -85,9 +91,9 @@
   font-size: 35px;
   text-align: left;
   padding: 15px;
+  padding-top: 0;
   border-radius: 15px;
   color: var(--text-bw);
-  width: fit-content;
 }
 
 .hoursPlayed{
@@ -108,6 +114,11 @@
   z-index: 1;
   text-align: bottom;
   max-width: 80%;
+  .hoursPlayed {
+  bottom: 10px; /* Position it properly */
+  left: 10px; /* Avoid any potential clipping */
+}
+
 }
 .redirectImage{
   padding-left: 8px;
