--- a/frontend/src/components/CookieMessage/CookieMessage.module.css
+++ b/frontend/src/components/CookieMessage/CookieMessage.module.css
@@ -1,3 +1,21 @@
+@keyframes slide-in-out {
+  0% {
+    left: -400px;
+  }
+  20% {
+    left: -400px;
+  }
+  30% {
+    left: 16px;
+  }
+  90% {
+    left: 16px;
+  }
+  100% {
+    left: -400px;
+  }
+}
+
 .container {
   background-color: var(--bg-light);
   padding: 16px;
@@ -5,12 +23,12 @@
   color: var(--text-primary);
   position: fixed;
   bottom: 16px;
-  left: 16px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
   max-width: 300px;
   display: flex;
   flex-direction: column;
   gap: 8px;
+  animation: slide-in-out 7.5s ease-in-out 0s 1 both;
 }
 
 .heading {
