Desktop branch changes

--- a/frontend/src/app/Dashboard/Dashboard.module.css
+++ b/frontend/src/app/Dashboard/Dashboard.module.css
@@ -6,7 +6,23 @@
     text-align: center;
 }
 
+.JumpBackIn {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 25px;
+    width: 100%-padding;
+}
+
 .TopRatedGames {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 25px;
+    width: 100%-padding;
+}
+
+.gamesTable{
     align-items: center;
     justify-content: center;
     text-align: center;
