--- a/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
@@ -195,6 +195,25 @@
 .platforms { grid-column: 1 / 2; }
 .hltb_score { grid-column: 2 / 3; }
 
+
+.reviews .numReviews{
+  visibility: hidden;
+  width: 100%;
+  bottom: 100%;
+  left: -2.5%;
+  background-color: rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  color: #fff;
+  text-align: center;
+  border-radius: 12px;
+  position: absolute;
+  z-index: 1;
+}
+
+.reviews:hover .numReviews{
+  visibility: visible
+}
+
 .hltb_score .tooltipText{
   visibility: hidden;
   width: 100%;
