--- a/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
+++ b/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
@@ -97,8 +97,21 @@
   padding: 30px;
   padding-bottom: 0;
   padding-top: 0;
+  margin-bottom: 0;
   border-radius: 15px;
   color: var(--text-bw);
+}
+
+.subHeader{
+  font-size: 15px;
+  text-align: left;
+  padding: 35px;
+  padding-bottom: 0;
+  padding-top: 0;
+  border-radius: 15px;
+  color: var(--text-bw);
+  font-style: italic;
+  opacity: .5;
 }
 
 .hoursPlayed {
