--- a/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
+++ b/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
@@ -89,10 +89,24 @@
 .sectionHeader{
   font-size: 35px;
   text-align: left;
-  padding: 15px;
+  padding: 30px;
+  padding-bottom: 0;
+  padding-top: 0;
+  margin-bottom: 0;
+  border-radius: 15px;
+  color: var(--text-bw);
+}
+
+.subHeader{
+  font-size: 15px;
+  text-align: left;
+  padding: 35px;
+  padding-bottom: 0;
   padding-top: 0;
   border-radius: 15px;
   color: var(--text-bw);
+  font-style: italic;
+  opacity: .5;
 }
 
 .hoursPlayed{
