--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -16,7 +16,7 @@
   gap: 16px;
 }
 
-.logo {
+.logoDark {
   filter: var(--logo-bw);
 }
 
@@ -32,19 +32,17 @@
   min-width: 120px; /* Ensures enough space for text */
   height: 30px; /* Adjust based on design */
   line-height: 1;
+  background-color: var(--button-primary);
 }
 
-.logo:hover, .links:hover {
+.logoBackground:hover, .links:hover {
   background-color: var(--bg-primary);
+  border-radius: 8px;
 }
 
 .logo {
   font-size: 32px;
   font-weight: bold;
-}
-
-.links {
-  background-color: var(--button-primary);
 }
 
 .account {
