--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -31,6 +31,7 @@
 body {
     padding:0;
     margin:0;
-    background-color: var(--bg-primary);
-    font-family: Arial, sans-serif;
+    background: radial-gradient(circle, var(--bg-light) 0%, var(--bg-dark) 100%);
+
+        font-family: Arial, sans-serif;
 }
