--- a/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
+++ b/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
@@ -88,6 +88,7 @@
 
 .sectionHeader {
   display: inline-block;
+  font-variant: small-caps;
   text-align: start;
   font-size: 35px;
   padding: 30px;
