--- a/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
+++ b/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
@@ -1,14 +1,13 @@
 .scrollContainer {
   margin: 0 auto;
-    /* Centers within parent */
   position: relative;
   width: 100%;
   padding: 20px 0;
   background-color: var(--bg-dark);
   border-radius: 15px;
   max-width: 1400px;
-    padding-top: 2px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+  padding-top: 2px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
 
 .gridContainer {
@@ -28,7 +27,7 @@
   border-radius: 8px;
   text-decoration: none;
   transition: transform 0.3s ease-in-out;
-  overflow: hidden; /* Ensure the overlay stays within bounds */
+  overflow: hidden;
 }
 
 .imageWrapper:hover {
@@ -54,11 +53,9 @@
 
 .gameImage {
   width: 100%;
-  /* Full width of grid cell */
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   transition: filter 0.3s ease-in-out;
-  /* Smooth brightness transition */
 }
 
 .gameCardInfo {
@@ -79,16 +76,13 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
-  /* Semi-transparent black overlay */
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   border-radius: 8px;
-  /* Match the image border radius */
 }
 
 .imageWrapper:hover::after {
   opacity: 1;
-  /* Show overlay on hover */
 }
 
 .sectionHeader {
@@ -133,14 +127,6 @@
   z-index: 1;
   text-align: bottom;
   max-width: 80%;
-
-  .hoursPlayed {
-    bottom: 10px;
-    /* Position it properly */
-    left: 10px;
-    /* Avoid any potential clipping */
-  }
-
 }
 
 .redirectImage {
