--- a/frontend/src/app/NewGameRecs/NewGameRecs.module.css
+++ b/frontend/src/app/NewGameRecs/NewGameRecs.module.css
@@ -1,6 +1,15 @@
 .container {
   color: var(--text-primary);
   padding: 20px;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  padding: 20px 0;
+  background-color: var(--bg-dark);
+  border-radius: 15px;
+  max-width: 1400px;
+  padding-top: 2px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
 
 .recommendedGames {
@@ -13,24 +22,137 @@
   margin-top: 30px;
 }
 
+.gameCard{
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.boil_score {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 1;
+  text-align: left;
+}
+
+.gameImage{
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
 .gamesGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
   align-items: start;
+  padding: 5%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 0 20px;
 }
 
 .gameCard {
   background-color: var(--bg-light);
-  padding: 20px;
   border-radius: 10px;
-  height: 250px;
+  height: auto;
+  width: 350px;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.imageWrapper{
+  background: linear-gradient(180deg, var(--bg-dark), var(--bg-primary));
+  position: relative;
+  width: fit-content;
+  text-decoration: none;
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden;
+}
+.gameCard:hover{
+  transform: scale(1.025);
+}
+.imageWrapper:hover .gameImage {
+  filter: brightness(0.5) blur(1px);
+}
+
+.imageWrapper:active {
+  filter: brightness(2);
+}
+
+/* Overlay effect */
+.imageWrapper::after {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 8px;
+}
+
+.imageWrapper:hover::after {
+  opacity: 1;
+}
+
+.redirectImage {
+  padding-left: 8px;
+  position: absolute;
+  height: 16px;
+  filter: invert(1);
+}
+
+.overlay{
+  top:90%;
+  left: 50%; /* Center horizontally */
+  position: absolute;
+
+  transform: translate(-50%, -50%); /* Adjust for the element's own size to truly center */
+  color: white;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  padding: 8px 12px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  line-height: 1.2;
+  z-index: 1;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay:hover {
+  opacity: 1;
+}
+.gameCardInfo {
+  text-align: left;
+  padding: 15px;
+  color: var(--text-bw);
+  width: inherit;
+  opacity: .6;
+}
+
+.gameTitle{
+  padding: 10px;
+
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--text-primary);
+  margin-bottom: 10px;
 }
 
 .filters {
@@ -153,3 +275,4 @@
 .customSelect :global(.reactSelect__option--is-focused) {
   background-color: rgba(255, 255, 255, 0.2) !important;
 }
+
