Styling changes across site namely Navbar Dashboard

--- a/frontend/src/app/Home.module.css
+++ b/frontend/src/app/Home.module.css
@@ -71,6 +71,11 @@
     margin: 10px;
 }
 
+.loginButton:hover {
+    background-color: var(--bg-accent-secondary);
+    
+}
+
 .exploreButton {
     background-color: var(--bg-accent-secondary);
     color: var(--text-primary);
