--- a/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
+++ b/frontend/src/components/GameDisplays/TopRatedGames/TopRatedGames.module.css
@@ -1,14 +1,14 @@
 .scrollContainer {
   margin: 0 auto;
-    /* Centers within parent */
   position: relative;
   width: 100%;
   padding: 20px 0;
   background-color: var(--bg-dark);
   border-radius: 15px;
   max-width: 1400px;
-    padding-top: 2px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+  padding-top: 2px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+  transition: all 0.25s ease-in-out;
 }
 
 .gridContainer {
