--- a/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
@@ -29,6 +29,7 @@
   width: 100%;
   max-width: 320px;
   align-items: center;
+  grid-row: 1 / 3;
 }
 
 /* Game Title */
@@ -39,7 +40,6 @@
   margin-top: 0;
   font-size: 30px;
   font-weight: bold;
-  backdrop-filter: blur(10px);
   display: inline;
   vertical-align: middle;
   width: fit-content;
@@ -50,7 +50,6 @@
 .imageContainer {
   background-color: var(--bg-dark);
   border-radius: 15px;
-  padding: 10px;
   text-align: center;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -96,7 +95,6 @@
   font-size: 30px;
 }
 
-/* Release Date */
 .releaseDate {
   margin-top: 10px;
   border: none;
@@ -109,13 +107,16 @@
   width: 100%;
   max-width: 280px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  font-variant: small-caps;
 }
 
 .titlePrice{
+  font-variant: small-caps;
   text-align: left;
   border: none;
   background: var(--bg-dark);
-  margin-bottom: 15px;
+  grid-column: 1 / 4;
+  grid-row: 1 / 1;
 }
 
 
@@ -159,7 +160,7 @@
 
 /* Game Summary */
 .gameSummary {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   text-align:justify;
   min-height: 200px;
   max-height: 250px;
