--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -10,8 +10,9 @@
   width: 90%;
   border-radius: 25px;
   box-shadow: 0 0px 2px var(--text-primary);
-  background-color: var(--bg-dark);
-  transition: all 0.25s ease-in-out; 
+  background:
+    radial-gradient(ellipse at bottom, var(--bg-dark), transparent),
+    radial-gradient(ellipse at top, var(--bg-primary), transparent);  transition: all 0.25s ease-in-out; 
 }
 
 .nav_options {
