--- a/frontend/src/components/GameDisplays/FriendsRecentGames/FriendsRecentGames.module.css
+++ b/frontend/src/components/GameDisplays/FriendsRecentGames/FriendsRecentGames.module.css
@@ -1,9 +1,8 @@
 .scrollContainer {
   margin: 0 auto;
   min-width: calc(100vw - 50px);
-  /* Centers within parent */
   position: relative;
-  width: 100%;
+  width: 90%;
   padding: 20px 0;
   background-color: var(--bg-dark);
   border-radius: 15px;
@@ -13,10 +12,9 @@
 }
 
 .gridContainer {
-  padding: 5%;
+  background: linear-gradient(180deg, var(--bg-dark), var(--bg-primary));
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(5, minmax(300px, 1fr));
   padding: 0 20px;
 }
 
@@ -24,7 +22,7 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
   background: linear-gradient(180deg, var(--bg-dark), var(--bg-primary));
   position: relative;
-  width: fit-content;
+  max-width: 350px;
   background-color: var(--bg-primary);
   border-radius: 8px;
   text-decoration: none;
@@ -55,11 +53,9 @@
 
 .gameImage {
   width: 100%;
-  /* Full width of grid cell */
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   transition: filter 0.3s ease-in-out;
-  /* Smooth brightness transition */
 }
 
 .gameCardInfo {
@@ -80,21 +76,19 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
-  /* Semi-transparent black overlay */
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   border-radius: 8px;
-  /* Match the image border radius */
 }
 
 .imageWrapper:hover::after {
   opacity: 1;
-  /* Show overlay on hover */
 }
 
 .sectionHeader {
-  font-size: 30px;
+  font-size: 24px;
   text-align: left;
+  font-variant: small-caps;
   padding: 30px;
   padding-bottom: 0;
   padding-top: 0;
@@ -120,14 +114,6 @@
   z-index: 1;
   text-align: bottom;
   max-width: 80%;
-
-  .hoursPlayed {
-    bottom: 10px;
-    /* Position it properly */
-    left: 10px;
-    /* Avoid any potential clipping */
-  }
-
 }
 
 .redirectImage {
@@ -141,8 +127,8 @@
 .gameTitle {
   position: absolute;
   top: 35%; 
-  left: 50%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Adjust for the element's own size to truly center */
+  left: 50%; 
+  transform: translate(-50%, -50%); 
   color: white;
   font-family: Arial, sans-serif;
   font-size: 18px;
